# parallama

./: .gitignore  LICENSE  MANIFEST.in  NEXT_SESSION.md  README.md  STRUCTURE.md  USAGE.md  alembic.ini  docker-compose.yml  parallama.spec  projectplan.md  pyproject.toml  setup.py
alembic/: env.py  script.py.mako
alembic/versions/: 20240130_121200_initial_schema.py  20240130_121300_add_roles_tables.py  20240130_200900_add_gateway_usage_logs.py  20250201_052426_e6b03bed495b_initial_migration.py
config/: config.dev.yaml  config.yaml  db_password.dev
parallama/core/: config.py  database.py  exceptions.py
parallama/db/: __init__.py
parallama/models/: __init__.py  rate_limit.py  role.py  user.py
parallama/services/: __init__.py  auth.py  role.py
scripts/: run_dev.py
src/parallama/: __init__.py
src/parallama/api/: __init__.py  app.py
src/parallama/cli/: __init__.py  output.py
src/parallama/cli/commands/: __init__.py  key.py  ratelimit.py  serve.py  usage.py  user.py
src/parallama/cli/core/: __init__.py  db.py
src/parallama/cli/utils/: __init__.py  (+1 more)
src/parallama/core/: __init__.py  config.py  database.py  exceptions.py  permissions.py  redis.py
src/parallama/db/: session.py
src/parallama/gateway/: __init__.py  base.py  config.py  ollama.py  openai.py  registry.py  router.py
src/parallama/middleware/: auth.py  rate_limit.py
src/parallama/models/: __init__.py  api_key.py  base.py  rate_limit.py  refresh_token.py  role.py  role_assignment.py  user.py  user_role.py
src/parallama/services/: api_key.py  auth.py  rate_limit.py  role.py  token_counter.py
systemd/: parallama.service
tests/: __init__.py  conftest.py  test_api_key_service.py  test_auth_middleware.py  test_auth_service.py  test_cli_commands.py  test_cli_db.py  test_cli_output.py  test_cli_ratelimit.py  test_cli_usage.py  test_edits_handler.py  test_embeddings_handler.py  test_gateway.py  test_gateway_config.py  test_gateway_integration.py  test_gateway_router.py  test_moderations_handler.py  test_ollama_gateway.py  test_openai_gateway.py  test_openai_gateway_integration.py  test_rate_limit_middleware.py  test_rate_limit_service.py  test_role_service.py  test_token_counter.py  test_utils.py
(+4 files in other folders)
