[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parallama"
version = "0.1.0"
description = "Multi-user authentication and access management service for Ollama"
authors = [
    {name = "Parallama Maintainer", email = "maintainer@parallama.org"},
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.4.2",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "redis>=5.0.1",
    "httpx>=0.25.1",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0.1",
    "click>=8.1.0",
    "tabulate>=0.9.0",
    "typer>=0.9.0",
    "rich>=13.7.0",
]

[project.scripts]
parallama-cli = "parallama.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["parallama*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
